--- a/flask_app/static/css/report.css
+++ b/flask_app/static/css/report.css
@@ -6,34 +6,37 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f4f4f4;
+    background-image: linear-gradient(to bottom, #14AE5C 0%, #14AE5C 60%, #9fe1b7 100%);
 }
 .newsletter {
     width: 60%;
     background-color: white;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
+    border-radius: 24px;
 }
 .header {
-    background-color: #7B4B94; /* Purple color for header */
+    background-color: #14AE5C; /* Purple color for header */
     color: white; /* White text color */
     padding: 10px;
     text-align: center;
+    border-radius: 24px;
 }
 .section {
     margin-top: 20px;
-    border-left: 5px solid #7B4B94; /* Purple border for sections */
+    border-left: 5px solid #14AE5C; /* Purple border for sections */
     padding-left: 10px;
 }
 .footer {
     text-align: center;
     margin-top: 20px;
-    background-color: #7B4B94; /* Purple background for footer */
+    background-color: #14AE5C; /* Purple background for footer */
     color: white; /* White text color */
     padding: 10px;
+    border-radius: 24px;
 }
 h2 {
-    color: #7B4B94; /* Purple text color for headings */
+    color: #14AE5C; /* Purple text color for headings */
 }
 
 h1 {
