--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="s130">
+      <h1 id="proj_title">Corporate Climate Scorecard</h1>
       <form action="/getScorecard", method="post">
         <div class="inner-form">
           <div class="input-field first-wrap">
